# bot_form

./: .dockerignore  .env.docker.example  .env.example  Dockerfile  README.md  dev-requrements.txt  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  requrements-dev.txt
bot/: celery_config.py  database.py  db_queries.py  handlers.py  models.py  settings.py  utils.py
